unpackaged/objects/DealerMesa__c.object
<CustomObject>
    <fields>
        <fullName>DataEntrada__c</fullName>
        <label>Data Entrada</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSaida__c</fullName>
        <label>Data Saída</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DealerSessao__c</fullName>
        <label>Dealer Sessão</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DealerSessao__c.Status__c</field>
                <operation>equals</operation>
                <value>Ativo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DealerSessao__c</referenceTo>
        <relationshipLabel>Dealers Mesas</relationshipLabel>
        <relationshipName>Dealers_Mesas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealers Mesas</relationshipLabel>
        <relationshipName>Dealers_Mesas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mesa__c</fullName>
        <label>Mesa</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Mesa__c.Status__c</field>
                <operation>equals</operation>
                <value>Aberta</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Mesa__c</referenceTo>
        <relationshipLabel>Dealers Mesas</relationshipLabel>
        <relationshipName>Dealers_Mesas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Observacao__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValorCapile__c</fullName>
        <label>Valor Capilé</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealer Mesa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Mesa__c</columns>
        <columns>DataEntrada__c</columns>
        <columns>DataSaida__c</columns>
        <columns>ValorCapile__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>DM-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealers Mesas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>